[tool.poetry]
name = "adv-mlaa-lab-1"
version = "0.1.0"
description = ""
authors = ["Harshit"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.2"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"
matplotlib = "^3.9.1.post1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
